--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "@tailwindcss/vite": "^4.1.18",
     "pinia": "^3.0.4",
     "vue": "^3.5.26",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vuetify": "^3.11.7"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
@@ -29,9 +31,13 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.23",
+    "daisyui": "^5.5.14",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "~10.6.2",
+    "express": "^5.2.1",
     "jiti": "^2.6.1",
+    "json-server": "^0.17.4",
+    "json-server-auth": "^2.1.0",
     "npm-run-all2": "^8.0.4",
     "postcss": "^8.5.6",
     "prettier": "3.7.4",
@@ -39,6 +45,7 @@
     "typescript": "~5.9.3",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5",
+    "vite-plugin-vuetify": "^2.1.3",
     "vue-tsc": "^3.2.2"
   }
 }
