--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.2.0",
     "@mdi/font": "^7.4.47",
     "@tailwindcss/vite": "^4.1.18",
+    "@vueuse/core": "^14.1.0",
+    "faker": "^6.6.6",
     "pinia": "^3.0.4",
-    "vue": "^3.5.26",
+    "vue": "^3.5.27",
     "vue-router": "^4.6.4",
     "vuetify": "^3.11.7"
   },
   "devDependencies": {
-    "@tsconfig/node24": "^24.0.3",
-    "@types/node": "^24.10.4",
+    "@tsconfig/node24": "^24.0.4",
+    "@types/node": "^24.10.9",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
@@ -43,9 +46,9 @@
     "prettier": "3.7.4",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
-    "vite": "^7.3.0",
+    "vite": "^7.3.1",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vite-plugin-vuetify": "^2.1.3",
-    "vue-tsc": "^3.2.2"
+    "vue-tsc": "^3.2.4"
   }
 }
