--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,12 +1,11 @@
 {
-  "extends": "@tsconfig/node24/tsconfig.json",
+  "extends": "./tsconfig.json",
   "include": [
     "vite.config.*",
     "vitest.config.*",
     "cypress.config.*",
     "nightwatch.conf.*",
-    "playwright.config.*",
-    "eslint.config.*"
+    "playwright.config.*"
   ],
   "compilerOptions": {
     "noEmit": true,
